# transformer-from-scratch

./: .gitignore  LICENSE  README.md  parser.py
src/: main.py
src/tokenizer/: CMakeLists.txt  tokenizer.cpp
src/transformer/: __init__.py  attention.py  encoder.py  sublayers.py  transformer.py  utils.py
